travis ci deploy added 220316

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,10 @@ deploy:
   region: "ap-northeast-2"
   app: "docker-fullstack-app"
   env: "DockerFullstackApp-env"
-  bucket_name: elasticbeanstalk-ap-northeast-2-972153559337
+  bucket_name: elasticbeanstalk-ap-northeast-2-818964263732
   bucket_path: "docker-fullstack-app"
   on:
-    branch: main
+    branch: master
   
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_ACCESS_KEY
